--- a/src/runtime/CMakeLists.txt
+++ b/src/runtime/CMakeLists.txt
@@ -1,3 +1,3 @@
-SET(runtime_SRCS table.cpp runtime.cpp value.cpp hash.cpp scope.cpp)
+SET(runtime_SRCS table.cpp runtime.cpp value.cpp hash.cpp scope.cpp operate.cpp)
 
 ADD_LIBRARY(runtime STATIC ${runtime_SRCS})
