return Reference by pointer instead of value

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 ADD_SUBDIRECTORY (parse)
 ADD_SUBDIRECTORY (runtime)
 
-SET (cua_SRCS main.cpp)
+SET (cua_SRCS main.cpp vm.cpp)
 ADD_EXECUTABLE (cua ${cua_SRCS})
