--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 PROJECT (CUA)
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
-SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-g -std=c++11")
+SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-g -std=c++11 -Wno-deprecated-register")
 ADD_SUBDIRECTORY (src)
 
 ADD_SUBDIRECTORY (gtest-1.7.0)
