--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,14 @@
 ADD_SUBDIRECTORY (parse)
 ADD_SUBDIRECTORY (runtime)
 
-SET (cua_SRCS main.cpp vm.cpp)
+SET (other_SRCS vm.cpp visitor.cpp naive-compiler.cpp compiler.cpp)
+SET (cua_SRCS main.cpp ${other_SRCS})
+
+ADD_LIBRARY(for_test STATIC ${other_SRCS})
 ADD_EXECUTABLE (cua ${cua_SRCS})
+
+TARGET_LINK_LIBRARIES(
+    cua
+    parser
+    runtime
+)
